Fix: Collapse Hide Animation - dont work with !important

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/animation-toggler-collapse.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/animation-toggler-collapse.scss
@@ -27,8 +27,8 @@
   }
   100% {
     transform: translateY(-100%);
-    display: none !important;
-    max-height: 0%;
+    display: none;
+    max-height: 0px;
     opacity: 0;
   }
 }
